--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,13 @@ version = '0.1-SNAPSHOT'
 mainClassName = 'org.quickstart.DataStreamJob'
 description = """Flink Quickstart Job"""
 ext {
+    kafkaVersion = '3.9.0'
     flinkVersion = '1.20.1'
     scalaBinaryVersion = '_2.12'
     slf4jVersion = '1.7.36'
     log4jVersion = '2.17.1'
+    jupiterVersion = '5.10.2'
+    testContainersVersion = '1.20.6'
 }
 
 applicationDefaultJvmArgs = ["-Dlog4j.configurationFile=log4j2.properties"]
@@ -49,6 +52,18 @@ dependencies {
     // --------------------------------------------------------------
     implementation "org.apache.flink:flink-streaming-java:${flinkVersion}"
     implementation "org.apache.flink:flink-clients:${flinkVersion}"
+    implementation("org.apache.flink:flink-connector-base:${flinkVersion}")
+    implementation("org.apache.flink:flink-connector-kafka:3.4.0-1.20")
+    implementation("org.apache.kafka:kafka-clients:${kafkaVersion}")
+    implementation("commons-codec:commons-codec:1.18.0")
+    implementation("org.apache.commons:commons-lang3:3.17.0")
+
+    // external config
+    implementation("com.typesafe:config:1.4.3")
+
+    // serde
+    implementation("com.fasterxml.jackson.core:jackson-databind:2.0.1")
+
     // --------------------------------------------------------------
     // Dependencies that should be part of the shadow jar, e.g.
     // connectors. These must be in the flinkShadowJar configuration!
@@ -57,8 +72,16 @@ dependencies {
     runtimeOnly "org.apache.logging.log4j:log4j-slf4j-impl:${log4jVersion}"
     runtimeOnly "org.apache.logging.log4j:log4j-api:${log4jVersion}"
     runtimeOnly "org.apache.logging.log4j:log4j-core:${log4jVersion}"
-    // Add test dependencies here.
-    // testCompile "junit:junit:4.12"
+
+    testImplementation "org.junit.jupiter:junit-jupiter:${jupiterVersion}"
+    testImplementation "org.junit.jupiter:junit-jupiter-api:${jupiterVersion}"
+    testImplementation "org.junit.jupiter:junit-jupiter-engine:${jupiterVersion}"
+    testImplementation "org.apache.flink:flink-test-utils:${flinkVersion}"
+    testImplementation "org.apache.flink:flink-test-utils-junit:${flinkVersion}"
+    testImplementation "org.testcontainers:testcontainers:${testContainersVersion}"
+    testImplementation "org.testcontainers:kafka:${testContainersVersion}"
+    testImplementation "org.testcontainers:redpanda:${testContainersVersion}"
+    testImplementation("org.awaitility:awaitility:4.3.0")
 }
 // make compileOnly dependencies available for tests:
 sourceSets {
@@ -85,4 +108,8 @@ jar {
 
 shadowJar {
     configurations = [project.configurations.flinkShadowJar]
+}
+
+test {
+    useJUnitPlatform()
 }
