--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,14 +1,14 @@
 job {
-  bootStrapServers = ${?BOOTSTRAP_SERVERS}
   bootStrapServers = "localhost:9092"
+  bootStrapServers = ${?KAFKA_BOOTSTRAP_SERVERS}
 
-  inputTopic = ${?INPUT_TOPIC}
   inputTopic = "input-topic"
+  inputTopic = ${?KAFKA_INPUT_TOPIC}
 
-  outputTopic = ${?OUTPUT_TOPIC}
   outputTopic = "output-topic"
-  
-  sessionInactivityGap = ${?SESSION_INACTIVITY_GAP}
+  outputTopic = ${?KAFKA_OUTPUT_TOPIC}
+
   sessionInactivityGap = "PT30M"
+  sessionInactivityGap = ${?SESSION_INACTIVITY_GAP}
 }
 
