--- a/k8s-helm/clickhouse-cluster/templates/clickhouseinstallation.yaml
+++ b/k8s-helm/clickhouse-cluster/templates/clickhouseinstallation.yaml
@@ -2,11 +2,15 @@ apiVersion: "clickhouse.altinity.com/v1"
 kind: "ClickHouseInstallation"
 metadata:
   name: "clickhouse-cluster"
+  namespace: "cluster-services"
 spec:
   configuration:
+    users:
+      default/networks/ip: "::/0"
+    zookeeper:
+      disabled: true
     keeper:
       enabled: true
-      replicas: 3
     clusters:
       - name: "default"
         layout:
