Refactor to use ClickStream and JSON-based serialization
Replaced `Event` with `ClickStreamEvent` and transitioned to JSON-based serialization for all entities. Refactored Kafka topics, mappers, and sinks to align with the updated models and processing logic. This improves clarity, modularity, and compatibility with the pipeline's JSON structure.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,11 +2,14 @@ job {
   bootStrapServers = "localhost:9092"
   bootStrapServers = ${?KAFKA_BOOTSTRAP_SERVERS}
 
-  inputTopic = "input-topic"
-  inputTopic = ${?KAFKA_INPUT_TOPIC}
+  clickStreamTopic = "click-stream"
+  clickStreamTopic = ${?KAFKA_CLICK_STREAM_TOPIC}
 
-  outputTopic = "output-topic"
-  outputTopic = ${?KAFKA_OUTPUT_TOPIC}
+  sessionsTopic = "sessions"
+  sessionsTopic = ${?KAFKA_SESSIONS_TOPIC}
+
+  attributedOrdersTopic = "attributed-orders"
+  attributedOrdersTopic = ${?KAFKA_ATTRIBUTED_ORDERS_TOPIC}
 
   sessionInactivityGap = "PT30M"
   sessionInactivityGap = ${?SESSION_INACTIVITY_GAP}
