Refactor topics and enhance session handling
Introduced structured Kafka topic names and updated configurations accordingly. Added session consumer functionality and refactored code to improve session order handling, including extending integration tests to validate the new logic.

--- a/k8s-helm/flink/templates/configmap.yaml
+++ b/k8s-helm/flink/templates/configmap.yaml
@@ -9,8 +9,9 @@ data:
 
   # Kafka
   KAFKA_BOOTSTRAP_SERVERS: "{{ .Values.kafka.bootstrapServers }}"
-  KAFKA_INPUT_TOPIC: "{{ .Values.kafka.inputTopic }}"
-  KAFKA_OUTPUT_TOPIC: "{{ .Values.kafka.outputTopic }}"
+  KAFKA_CLICK_STREAM_TOPIC: "{{ .Values.kafka.clickStreamTopic }}"
+  KAFKA_SESSIONS_TOPIC: "{{ .Values.kafka.sessionsTopic }}"
+  KAFKA_ATTRIBUTED_ORDERS_TOPIC: "{{ .Values.kafka.attributedOrdersTopic }}"
 
   # Session processor
   SESSION_INACTIVITY_GAP: "{{ .Values.sessionProcessor.maxSessionLookback }}"
