--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,17 +1,28 @@
 job {
-  bootStrapServers = "localhost:9092"
-  bootStrapServers = ${?KAFKA_BOOTSTRAP_SERVERS}
-
-  clickStreamTopic = "click-stream"
-  clickStreamTopic = ${?KAFKA_CLICK_STREAM_TOPIC}
-
-  sessionsTopic = "sessions"
-  sessionsTopic = ${?KAFKA_SESSIONS_TOPIC}
-
-  attributedOrdersTopic = "attributed-orders"
-  attributedOrdersTopic = ${?KAFKA_ATTRIBUTED_ORDERS_TOPIC}
-
   sessionInactivityGap = "PT30M"
   sessionInactivityGap = ${?SESSION_INACTIVITY_GAP}
+
+  kafka {
+    bootStrapServers = "localhost:9092"
+    bootStrapServers = ${?KAFKA_BOOTSTRAP_SERVERS}
+
+    securityProtocol: "PLAINTEXT"
+    securityProtocol: ${KAFKA_SECURITY_PROTOCOL}
+    sasl: {
+      jaas.config: null
+      jaas.config: ${?KAFKA_SASL_JAAS_CONFIG}
+      mechanism: "PLAIN"
+      mechanism: ${KAFKA_SASL_MECHANISM}
+    }
+
+    clickStreamTopic = "click-stream"
+    clickStreamTopic = ${?KAFKA_CLICK_STREAM_TOPIC}
+
+    sessionsTopic = "sessions"
+    sessionsTopic = ${?KAFKA_SESSIONS_TOPIC}
+
+    attributedOrdersTopic = "attributed-orders"
+    attributedOrdersTopic = ${?KAFKA_ATTRIBUTED_ORDERS_TOPIC}
+  }
 }
 
