Fix typo in Kafka bootstrapServers configuration key

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,8 +3,8 @@ job {
   sessionInactivityGap = ${?SESSION_INACTIVITY_GAP}
 
   kafka {
-    bootStrapServers = "localhost:9092"
-    bootStrapServers = ${?KAFKA_BOOTSTRAP_SERVERS}
+    bootstrapServers = "localhost:9092"
+    bootstrapServers = ${?KAFKA_BOOTSTRAP_SERVERS}
 
     securityProtocol: "PLAINTEXT"
     securityProtocol: ${KAFKA_SECURITY_PROTOCOL}
