--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,7 @@ dependencies {
 
     // serde
     implementation("com.fasterxml.jackson.core:jackson-databind:2.0.1")
+    implementation("com.fasterxml.jackson.module:jackson-module-jaxb-annotations:2.0.1")
 
     // --------------------------------------------------------------
     // Dependencies that should be part of the shadow jar, e.g.
