--- a/attribution-service/package.json
+++ b/attribution-service/package.json
@@ -5,10 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "functions-framework --target=attribution",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "dependencies": {
     "@google-cloud/functions-framework": "^3.3.0"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0",
+    "supertest": "^7.1.0"
   },
   "engines": {
     "node": ">=18.0.0"
