--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -31,7 +31,12 @@ jobs:
           username: nadberezny
           password: ${{ secrets.NADBEREZNY_DOCKER_TOKEN }}
 
-      - name: Build Docker image
+      - name: Build and push flink-job image
         run: |
           ./gradlew :flink-job:dockerBuildAndPushImage -PdockerPlatform=linux/amd64 -PdockerTag=latest
+          docker build -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest .
+
+      - name: Build and push attribution-service image
+        run: |
+          ./gradlew :attribution-service:dockerBuildAndPushImage -PdockerPlatform=linux/amd64 -PdockerTag=latest
           docker build -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest .
