--- a/flink-job/src/main/resources/application.conf
+++ b/flink-job/src/main/resources/application.conf
@@ -2,6 +2,11 @@ job {
   sessionInactivityGap = "PT30M"
   sessionInactivityGap = ${?SESSION_INACTIVITY_GAP}
 
+  attribution {
+    serviceUrl = "localhost:8080/attribution"
+    serviceUrl = ${ATTRIBUTION_SERVICE_URL}
+  }
+
   kafka {
     bootstrapServers = "localhost:9092"
     bootstrapServers = ${?KAFKA_BOOTSTRAP_SERVERS}
