--- a/flink-job/src/main/resources/application.conf
+++ b/flink-job/src/main/resources/application.conf
@@ -2,9 +2,30 @@ job {
   sessionInactivityGap = "PT30M"
   sessionInactivityGap = ${?SESSION_INACTIVITY_GAP}
 
-  attribution {
-    serviceUrl = "localhost:8080/attribution"
-    serviceUrl = ${ATTRIBUTION_SERVICE_URL}
+  cdc {
+    enabled = false
+    enabled = ${?CDC_ENABLED}
+
+    stateTTL = "PT30D"
+    stateTTL = ${?CDC_STATE_TTL}
+
+    hostname = "localhost"
+    hostname = ${?CDC_HOSTNAME}
+
+    port = 3306
+    port = ${?CDC_PORT}
+
+    database = "default"
+    database = ${?CDC_DATABASE}
+
+    table = "my_table"
+    table = ${?CDC_TABLE}
+
+    username = "root"
+    username = ${?CDC_USERNAME}
+
+    password = "password"
+    password = ${?CDC_PASSWORD}
   }
 
   kafka {
@@ -12,7 +33,7 @@ job {
     bootstrapServers = ${?KAFKA_BOOTSTRAP_SERVERS}
 
     securityProtocol: "PLAINTEXT"
-    securityProtocol: ${KAFKA_SECURITY_PROTOCOL}
+    securityProtocol: ${?KAFKA_SECURITY_PROTOCOL}
     sasl: {
       jaas.config: null
       jaas.config: ${?KAFKA_SASL_JAAS_CONFIG}
