--- a/flink-job/build.gradle
+++ b/flink-job/build.gradle
@@ -24,17 +24,6 @@ ext {
 
 applicationDefaultJvmArgs = ["-Dlog4j.configurationFile=log4j2.properties"]
 
-// declare where to find the dependencies of your project
-repositories {
-    gradlePluginPortal()
-    mavenCentral()
-    maven {
-        url "https://repository.apache.org/content/repositories/snapshots"
-        mavenContent {
-            snapshotsOnly()
-        }
-    }
-}
 // NOTE: We cannot use "compileOnly" or "shadow" configurations since then we could not run code
 // in the IDE or with "gradle run". We also cannot exclude transitive dependencies from the
 // shadowJar yet (see https://github.com/johnrengelman/shadow/issues/159).
@@ -49,19 +38,15 @@ configurations {
 }
 
 dependencies {
-    // --------------------------------------------------------------
-    // Compile-time dependencies that should NOT be part of the
-    // shadow (uber) jar and are provided in the lib folder of Flink
-    // --------------------------------------------------------------
     implementation "org.apache.flink:flink-streaming-java:${flinkVersion}"
     implementation "org.apache.flink:flink-clients:${flinkVersion}"
     implementation("org.apache.flink:flink-connector-base:${flinkVersion}")
     implementation("org.apache.flink:flink-connector-kafka:3.4.0-1.20")
+
+    // CDC
     implementation("org.apache.flink:flink-connector-mysql-cdc:3.3.0")
     implementation("io.debezium:debezium-connector-mysql:${debeziumVersion}")
-    implementation("io.debezium:debezium-core:${debeziumVersion}")
-    implementation("io.debezium:debezium-api:${debeziumVersion}")
-    implementation("org.apache.flink:flink-connector-mysql-cdc")
+
     implementation("org.apache.kafka:kafka-clients:${kafkaVersion}")
     implementation("commons-codec:commons-codec:1.18.0")
     implementation("org.apache.commons:commons-lang3:3.17.0")
@@ -91,6 +76,8 @@ dependencies {
     testImplementation "org.testcontainers:redpanda:${testContainersVersion}"
     testImplementation "org.testcontainers:mysql:${testContainersVersion}"
     testImplementation("org.awaitility:awaitility:4.3.0")
+
+    testImplementation("mysql:mysql-connector-java:8.0.33")
 }
 // make compileOnly dependencies available for tests:
 sourceSets {
