--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -31,10 +31,14 @@ jobs:
           username: nadberezny
           password: ${{ secrets.NADBEREZNY_DOCKER_TOKEN }}
 
-      - name: Build and push flink-job image
+      - name: Build and push cdc-evolution image
         run: |
-          ./gradlew :flink-job:dockerBuildAndPushImage -PdockerPlatform=linux/amd64 -PdockerTag=latest
+          ./gradlew :cdc-evolution:dockerBuildAndPushImage -PdockerPlatform=linux/amd64 -PdockerTag=latest
 
       - name: Build and push attribution-service image
         run: |
           ./gradlew :attribution-service:dockerBuildAndPushImage -PdockerPlatform=linux/amd64 -PdockerTag=latest
+
+      - name: Build and push flink-job image
+        run: |
+          ./gradlew :flink-job:dockerBuildAndPushImage -PdockerPlatform=linux/amd64 -PdockerTag=latest    
