--- a/flink-job/src/main/resources/application.conf
+++ b/flink-job/src/main/resources/application.conf
@@ -28,6 +28,11 @@ job {
     password = ${?CDC_PASSWORD}
   }
 
+  attribution {
+    serviceUrl = "https://my-attribution-service:8080"
+    serviceUrl = ${?ATTRIBUTION_SERVICE_URL}
+  }
+
   kafka {
     bootstrapServers = "localhost:9092"
     bootstrapServers = ${?KAFKA_BOOTSTRAP_SERVERS}
@@ -38,7 +43,7 @@ job {
       jaas.config: null
       jaas.config: ${?KAFKA_SASL_JAAS_CONFIG}
       mechanism: "PLAIN"
-      mechanism: ${KAFKA_SASL_MECHANISM}
+      mechanism: ${?KAFKA_SASL_MECHANISM}
     }
 
     clickStreamTopic = "click-stream"
