--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'flink-sessionizer'
 
 include('cdc-evolution')
+include('clickhouse-evolution')
 include('attribution-service')
 include('flink-job')
 
