--- a/clickstream-generator/build.gradle
+++ b/clickstream-generator/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation "com.typesafe:config:1.4.2"
 
     // utils
+    implementation 'com.github.javafaker:javafaker:1.0.2'
     implementation 'org.apache.commons:commons-lang3:3.13.0'
     implementation 'org.apache.commons:commons-rng-simple:1.5'
 
