--- a/.github/workflows/flink-job-docker.yml
+++ b/.github/workflows/flink-job-docker.yml
@@ -23,11 +23,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 11
+      - name: Set up JDK
         uses: actions/setup-java@v3
         with:
           distribution: temurin
-          java-version: 11
+          java-version: 21
 
       - name: Log in to Docker registry
         uses: docker/login-action@v3
